repo_artifact_dir/part3/3.4/ingress.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: GatewayClass
metadata:
  name: nginx
spec:
  controllerName: k8s.io/ingress-nginx

---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: shared-gateway
  namespace: exercises
spec:
  gatewayClassName: example
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: All

---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: shared-httproute
  namespace: exercises
spec:
  parentRefs:
    - name: shared-gateway
  hostnames:
    - app.local
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: "/status"
      backendRefs:
        - name: log-output
          namespace: exercises
          port: 80
    - matches:
        - path:
            type: PathPrefix
            value: "/pingpong"
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: "/"
      backendRefs:
        - name: ping-pong
          namespace: exercises
          port: 80
